# CleanArchitectureProject

./: .coverage  API_ENDPOINTS.md  CLEAN_STRUCTURE.md  README.md  alembic.ini  config.py  logging_config.py  main.py  orchestrator.py  pyproject.toml  search_orchestrator.db
adapters/: amazon_scraper_adapter.py  base.py  mercadolibre_scraper_adapter.py  utils.py
alembic/: env.py
alerts/: evaluation.py  notifier.py  repository.py  scheduler.py  tracker.py
api/: alert_routes.py  auth_routes.py  dependencies.py  notification_routes.py  routes.py  search_routes.py  weights_validation.py
application/search/: search_service.py
auth/: password.py  password_rules.py  pii.py  service.py  token_service.py  tokens.py  user_repository.py
cache/: abstract_cache.py  key_builder.py  redis_cache.py
domain/: alert.py  ports.py  product.py  token.py  user.py  weights.py
domain/product/: __init__.py
domain/users/: user.py
infrastructure/cache/: in_memory_cache.py
normalizer/: engine.py  mapping_loader.py  yaml_mapping_loader.py
normalizer/mappings/: amazonscraperadapter.yaml  mercadolibrescrapadapter.py  mercadolibrescraperadapter.yaml
ranker/: strategy.py  weighted_scorer.py
search_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_orchestrator.py
tests/adapters/: test_amazon_scraper_adapter.py  test_mercadolibre_scraper_adapter.py
tests/auth/: test_tokens.py
tests/cache/: test_in_memory_cache.py  test_redis_cache.py
tests/integration/: conftest.py  test_alert_repository.py  (+1 more)
web/: endpoints_tester.html
(+12 files in other folders)
